# rwa-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
rwa_sdk/: __init__.py  client.py
rwa_sdk/abis/: backed_token.json  centrifuge_tranche.json  centrifuge_vault.json  chainalysis_sanctions.json  chainlink_aggregator.json  erc20.json  erc4626.json  maple_pool.json  maple_pool_manager.json  ondo_blocklist.json  ondo_kyc_registry.json  ondo_oracle.json  ondo_ousg_oracle.json  ondo_rebasing.json  securitize_token.json
rwa_sdk/core/: __init__.py  chain.py  exceptions.py  http.py  models.py  oracle.py  provider.py  registry.py
rwa_sdk/infra/: abi.py  evm.py  http.py  provider.py  validation.py
rwa_sdk/protocols/: __init__.py  backed.py  base.py  centrifuge.py  maple.py  ondo.py  securitize.py
rwa_sdk/standards/: erc20.py  erc4626.py
tests/: conftest.py  test_client.py
tests/test_core/: test_chain.py  test_exceptions.py  test_http.py  test_oracle.py  test_registry.py
tests/test_infra/: test_abi.py  test_evm.py  test_provider.py  test_validation.py
tests/test_protocols/: test_adapters.py  test_base.py
